--- a/style.css
+++ b/style.css
@@ -150,6 +150,108 @@ button:active {
   transform: translateY(2px);
 }
 
+
+
+.colorful-section {
+  height: 100vh;
+  /* 100% of the specified viewport height */
+  width: 100%;
+  /*transition: background-color 0.5s;*/
+}
+
+.first {
+  background: rgba(217, 217, 217, 0.40);
+}
+
+.blue {
+  background-color: blue;
+}
+
+.green {
+  background-color: green;
+}
+
+.company {
+  background-color: #D0D7E7;
+  color: #000;
+  height: 520px;
+  flex-shrink: 0;
+}
+
+.companyInfo {
+  display: flex;
+  width: 244px;
+  height: 83.778px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.home {
+  display: flex;
+  width: 169px;
+  height: 83px;
+  flex-direction: column;
+  justify-content: right;
+  flex-shrink: 0;
+}
+
+
+.about {
+  display: flex;
+  width: 127px;
+  height: 83.778px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.projects {
+  display: flex;
+  width: 168px;
+  height: 83px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.contactus {
+  display: flex;
+  width: 196px;
+  height: 83px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.socials {
+  display: flex;
+  width: 244px;
+  height: 83px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.instagram {
+  display: flex;
+  width: 198px;
+  height: 83px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.linkedin {
+  display: flex;
+  width: 144px;
+  height: 99px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+
 /*
 .navBar {
   padding: 0px;
