--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 }
 
 .navbar a:hover {
-  color: #946b1f;
+  color: #f4e0bb;
 }
 
 .navbar li {
@@ -98,70 +98,6 @@ body {
   font-size: large;
 }
 
-
-button {
-  color: #D6AD60;
-  background-color: #292b34;
-  border: 3px solid #D6AD60;
-  border-radius: 11px;
-  position: absolute;
-  width: 277px;
-  height: 80px;
-  top: 73%;
-  left: 50%;
-  gap: 10px;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-  text-align: center;
-  align-items: center;
-  text-decoration: none;
-  display: inline-block;
-  padding: 13px 23px;
-  cursor: pointer;
-  flex-shrink: 0;
-  font-size: x-large;
-  font-weight: bold;
-}
-
-.companynav a {
-  color: #D6AD60;
-  text-decoration: none;
-  padding: 15px;
-  display: block;
-  text-align: left;
-}
-
-.companynav li {
-  float: left;
-  font-weight: 900;
-  font-size: large;
-}
-
-
-
-
-/*
-button {
-  display: flex;
-  width: 277px;
-  height: 80px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-
-}*/
-
-
-button:hover {
-  background-color: #121626;
-}
-
-button:active {
-  box-shadow: 0 4px rgb(210, 206, 198);
-
-  transform: translateY(2px);
-}
 
 .colorful-section li {
   display: flex;
@@ -191,18 +127,48 @@ button:active {
 .company {
   background-color: #D0D7E7;
   color: #000;
-  height: 520px;
+  height: 300px;
   flex-shrink: 0;
+}
+
+.companynav a {
+  color: #121626;
+  text-decoration: none;
+  padding: 30px;
+  display: block;
+  text-align: left;
+  margin: 30px;
+  line-break: normal;
+  text-shadow: 3px 3px 20px #121626;
+}
+
+.companynav li {
+  float: left;
+  font-weight: 900;
+  font-size: large;
+  cursor: pointer;
+}
+
+
+.companynav a:hover {
+  color: #f4e0bb;
 }
 
 .companyInfo {
   display: flex;
   width: 244px;
-  height: 83.778px;
+  height: 83px;
+  font-size: x-large;
   flex-direction: column;
   justify-content: center;
   flex-shrink: 0;
 }
+
+/*
+.companyInfo::after {
+  content: "\a";
+  white-space: pre;
+}*/
 
 .home {
   display: flex;
@@ -212,7 +178,6 @@ button:active {
   justify-content: right;
   flex-shrink: 0;
 }
-
 
 .about {
   display: flex;
@@ -268,6 +233,40 @@ button:active {
   flex-shrink: 0;
 }
 
+button {
+  color: #D6AD60;
+  background-color: #292b34;
+  border: 3px solid #D6AD60;
+  border-radius: 11px;
+  position: absolute;
+  width: 277px;
+  height: 80px;
+  top: 73%;
+  left: 50%;
+  gap: 10px;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  display: inline-block;
+  padding: 13px 23px;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+button:hover {
+  background-color: #121626;
+  color: #f4e0bb;
+  border: 3px solid #f4e0bb;
+
+}
+
+/*button:active {
+  box-shadow: 0 7px rgb(210, 206, 198);
+  transform: translateY(2px);
+}*/
 
 /*
 .navBar {
@@ -301,4 +300,16 @@ button:active {
 
 .navBar::after {
   color: darkred;
+}*/
+
+/*
+button {
+  display: flex;
+  width: 277px;
+  height: 80px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+
 }*/
