--- a/style.css
+++ b/style.css
@@ -297,6 +297,7 @@ button:hover {
   width: 648px;
   color: #FEFFFC;
   text-align: center;
+  font-family: Cinzel;
   font-size: 30px;
   font-weight: 400;
   letter-spacing: 3px;
