--- a/style.css
+++ b/style.css
@@ -303,8 +303,20 @@ button:hover {
   letter-spacing: 3px;
 }
 
+/*      FORM      */
 
 
+.termsAndConditions {
+  display: flex;
+  width: 523px;
+  height: 35px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+
+/*            ABOUT HTML           */
 
 
 /*index html*/
