--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ body {
   flex-shrink: 0;
 }
 
-button {
+.buttonStarted {
   color: #D6AD60;
   background-color: #292b34;
   border: 3px solid #D6AD60;
@@ -279,7 +279,9 @@ button:hover {
 /*            ABOUT HTML           */
 
 .userInquiry {
-  border: 5px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
@@ -293,6 +295,7 @@ button:hover {
 
 }
 
+/*
 .inquire {
   width: 648px;
   height: 40px;
@@ -301,12 +304,24 @@ button:hover {
   font-size: 30px;
   font-weight: 400;
   letter-spacing: 3px;
-}
+}*/
 
 /*      FORM      */
+
+.formmmmm {
+  max-width: 300px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  padding: 100px;
+  align-items: center;
+  float: center;
+  margin-left: 30%;
+}
+
 .colorful-section-blue {
-  width: 1920px;
-  height: 1080px;
+  width: 1900px;
+  height: 10px;
   color: #121626;
 }
 
@@ -316,8 +331,10 @@ input[type=text] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  margin-top: 6px;
+  margin-top: 1rem;
   margin-bottom: 16px;
+
+
   /*
   width: 465px;
   height: 56px;
@@ -327,11 +344,16 @@ input[type=text] {
 }
 
 textarea {
-  color: white;
+  color: rgb(7, 6, 6);
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
+  width: 465px;
   height: 126px;
+  margin-top: 1rem;
+  font-size: large;
+  font-style: normal;
+
   /*width: 809px;
   height: 290px;
   flex-shrink: 0;
@@ -339,13 +361,12 @@ textarea {
   background: #504946;
   font-style: normal;
   color: #D0D7E7;
-  font-size: large;
   margin-left: 600px;
   margin-top: 1px;
   margin-right: 900px;*/
 }
 
-
+/*
 .termsAndConditions {
   width: 523px;
   display: flex;
@@ -356,11 +377,87 @@ textarea {
   align-items: center;
   text-align: left;
   display: flex;
+}*/
 
+.termsAndConditions {
+  color: white;
+  width: 500px;
+}
+
+.TCP {
+  color: pink;
+  width: 500px;
+}
+
+
+.TCP p {
+  font-size: 25px;
+}
+
+.TCP a {
+  color: #cfc6db;
+}
+
+.TCP a:visited {
+  color: #D6AD60;
+}
+
+.TCP a:hover {
+  color: #8c703b;
+}
+
+.TCP a:active {
+  color: #f4e0bb;
+}
+
+
+
+
+.buttonSend {
+  color: #D6AD60;
+  background-color: #292b34;
+  border: 3px solid #D6AD60;
+  border-radius: 11px;
+  position: absolute;
+  width: 250px;
+  height: 70px;
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  display: block;
+  padding: 13px 23px;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-size: x-large;
+  font-weight: bold;
+  position: relative;
+  align-items: center;
+  float: center;
+  margin-left: 100%;
+  margin-top: 40px;
 
 }
 
+.centered {
+  margin: 0;
+  position: absolute;
+  top: 45%;
+  left: 190%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 /*            ABOUT HTML           */
+
+
+
+
+
+
+
+
+
+
 
 
 
