--- a/style.css
+++ b/style.css
@@ -496,6 +496,46 @@ textarea {
   padding: 50px;
 }
 
+.buttonBack {
+  color: #D6AD60;
+  background-color: #292b34;
+  border: 3px solid #D6AD60;
+  border-radius: 11px;
+  position: absolute;
+  width: 277px;
+  height: 80px;
+  top: 190%;
+  left: 50%;
+  gap: 10px;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  display: inline-block;
+  padding: 13px 23px;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.checkbox {
+  content: "";
+  display: inline-block;
+  border: 1px solid #D6AD60;
+  width: 50%;
+  height: 100%;
+  margin-right: 0.5rem;
+}
+
+
+
+
+
+
+
+
+
 /*index html*/
 
 /*button:active {
