--- a/style.css
+++ b/style.css
@@ -581,29 +581,64 @@ strong {
   background-color: #121626;
 }*/
 
+
+
+/*font sizes for each bar + hovers on each*/
 .html {
   font-size: 25px;
+  cursor: default;
+
+}
+
+.html:hover {
+  color: #121626;
+  transition: 0.5s;
+  cursor: default;
+
 }
 
 .css {
   font-size: 25px;
+  cursor: default;
+
+}
+
+.css:hover {
+  color: #121626;
+  transition: 0.5s;
+  cursor: default;
+
 }
 
 .javascript {
   font-size: 25px;
+  cursor: default;
+
 }
 
-.css {
-  font-size: 25px;
+.javascript:hover {
+  color: #121626;
+  transition: 0.5s;
+  cursor: default;
+
 }
 
 .design {
   font-size: 25px;
+  cursor: default;
+
 }
+
+.design:hover {
+  color: #121626;
+  transition: 0.5s;
+  cursor: default;
+}
+
 
 /* progress bar for each skill individually */
 
-
+/*HTML*/
 .progress-barHTML {
   background-color: #D6AD60;
   height: 30px;
@@ -617,6 +652,7 @@ strong {
   background-color: #121626;
 }
 
+/*CSS*/
 .progress-barCSS {
   background-color: #D6AD60;
   height: 30px;
@@ -630,6 +666,7 @@ strong {
   background-color: #121626;
 }
 
+/*JS*/
 .progress-barJS {
   background-color: #D6AD60;
   height: 30px;
@@ -643,6 +680,7 @@ strong {
   background-color: #121626;
 }
 
+/*UI UX DESIGN*/
 .progress-barDesign {
   background-color: #D6AD60;
   height: 30px;
@@ -655,6 +693,7 @@ strong {
   height: 100%;
   background-color: #121626;
 }
+
 
 
 /*back to top btn */
