--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
 .container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .card {
   background-color: #e0dae8;
   width: 280px;
-  height: 400px;
   margin: 15px;
   border-radius: 15px;
 }
@@ -45,6 +45,33 @@ body {
   background-image: url('https://i.pinimg.com/564x/ce/3e/f0/ce3ef02937d90d6e2656fd15476e1860.jpg');
 }
 
+.card h1 {
+  padding: 10px;
+  text-align: center;
+}
+
+.card p {
+  padding: 10px;
+}
+
+.card a {
+  background-color: pink;
+  color: #8c703b;
+  padding: 15px 20px;
+  display: block;
+  text-align: center;
+  margin: 15px 45px;
+  border-radius: 11px;
+  text-decoration: none;
+}
+
+.card:hover {
+  background-color: #504946;
+  color: #ccc;
+  cursor: pointer;
+  transform: scale(1.05);
+  transition: all 0.5s ease;
+}
 
 
 .backgroundIMG img {
